update the html paths

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
         <a href="home.html">Home</a>
-        <a href="html/specials.html">Special Promos</a>
-        <a href="html/pic_gallery.html">Picture Gallery</a>
-        <a href="html/hours.html">Store Hours</a>
-        <a href="html/contact.html">Contact Us</a>
+        <a href="HTML/specials.html">Special Promos</a>
+        <a href="HTML/pic_gallery.html">Picture Gallery</a>
+        <a href="HTML/hours.html">Store Hours</a>
+        <a href="HTML/contact.html">Contact Us</a>
       </div>
     </div>
     <div class="container-fluid border-bottom border-dark sticky-top py-1" style="background: #EEEEEE;">
@@ -82,8 +82,8 @@
   </div>
   <div class="container my-3" id="homePageDiv">
     <div class="container">
-      <h4 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> <span
-          style="color: #198FCB;">KangVape/ONEE stick</span></h4>
+      <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> <span
+          style="color: #198FCB;">KangVape/ONEE stick</span></h5>
       <img src="images/kang1.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage">
       <h3 class="text-center my-2 "><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></h3>
       <div class="accordion my-3" id="accordionPanelsStayOpenExample">
