--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -30,7 +30,7 @@
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 overlay-content">
                         <li class="nav-item">
-                            <a class="nav-link active ml-5" href="../home.html" onclick="Routing(this)">Home <span
+                            <a class="nav-link active ml-5" href="../index.html" onclick="Routing(this)">Home <span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
@@ -56,7 +56,7 @@
         <div id="myNav" class="overlay">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
-                <a href="../home.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="specials.html">Special Promos</a>
                 <a href="pic_gallery.html">Picture Gallery</a>
                 <a href="hours.html">Store Hours</a>
