--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active ml-5" href="home.html" onclick="Routing(this)">Home <span
+            <a class="nav-link active ml-5" href="index.html" onclick="Routing(this)">Home <span
                 class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -53,7 +53,7 @@
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="HTML/specials.html">Special Promos</a>
         <a href="HTML/pic_gallery.html">Picture Gallery</a>
         <a href="HTML/hours.html">Store Hours</a>
