update the special display on main page

--- a/index.html
+++ b/index.html
@@ -82,10 +82,14 @@
   </div>
   <div class="container my-3" id="homePageDiv">
     <div class="container">
-      <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> <span
-          style="color: #198FCB;">KangVape/ONEE stick</span></h5>
-      <img src="images/kang1.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage">
-      <h3 class="text-center my-2 "><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></h3>
+      <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> </h5>
+      <!-- <img src="images/kang1.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage"> -->
+      <div class="border border-secondary text-center">
+        <p style="color: #198FCB; font-weight: bold; margin-bottom: 0%;">KangVape/ONEE stick VAPE</p>
+        <p style="font-size: 1.25rem; font-weight: bold; margin-bottom: 0%;">2 for $21.99 OR 1 for $11.99</p>
+      </div>
+      <p class="text-center my-2" style="font-size: 1.10rem; font-weight: bold;"><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></p>
+      <!-- <h5 class="text-center my-2 "><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></h5> -->
       <div class="accordion my-3" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
