Update chevron image

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   <!-- <nav id="navBar" class="navbar navbar-expand-lg sticky-top py-0">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="https://www.chevronwithtechron.com/images/layout/logo.svg" width="34" height="34"
+        <img src="https://www.chevron.com/-/media/shared-media/images/hallmark.png" width="34" height="34"
           class="d-inline-block align-top pl-1" alt="" loading="lazy">&nbsp;&nbsp;Chevron &
         Campus Food Shop
       </a>
