Update special prices

--- a/HTML/specials.html
+++ b/HTML/specials.html
@@ -17,7 +17,7 @@
     <!-- <nav id="navBar" class="navbar navbar-expand-lg sticky-top py-0">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="https://www.chevronwithtechron.com/images/layout/logo.svg" width="34" height="34"
+            <img src="https://www.chevron.com/-/media/shared-media/images/hallmark.png" width="34" height="34"
               class="d-inline-block align-top pl-1" alt="" loading="lazy">&nbsp;&nbsp;Campus Food Shop
           </a>
           <button class="navbar-toggler navbar-toggler-right navbar-light" type="button" data-bs-toggle="collapse"
@@ -99,12 +99,24 @@
                                 <th>Special</th>
                             </tr>
                             <tr>
-                                <td>POP</td>
-                                <td>2 for $15.99, 1 for $8.99</td>
+                                <td>Orion</td>
+                                <td>2 for $33.99, 1 for $17.99</td>
                             </tr>
                             <tr>
-                                <td>KangVape</td>
-                                <td>2 for $21.99, 1 for $11.99</td>
+                                <td>Kadobar</td>
+                                <td>2 for $32.99, 1 for $17.99</td>
+                            </tr>
+                            <tr>
+                                <td>Kang Vape/Onee Stick 2000</td>
+                                <td>2 for $20.99, 1 for $11.99</td>
+                            </tr>
+                            <tr>
+                                <td>Kang Vape/Onee Stick 3000</td>
+                                <td>2 for $26.99, 1 for $11.99</td>
+                            </tr>
+                            <tr>
+                                <td>Elfbar</td>
+                                <td>2 for $36.99, 1 for $19.99</td>
                             </tr>
                         </table>
                     </div>
@@ -127,15 +139,15 @@
                             </tr>
                             <tr>
                                 <td>Body Armor</td>
-                                <td>2 (28oz) for $4.50</td>
+                                <td>2 (28oz) for $5.00</td>
                             </tr>
                             <tr>
                                 <td>Gatorade</td>
-                                <td>2 (28oz) for $3.99</td>
+                                <td>2 (28oz) for $5.00</td>
                             </tr>
                             <tr>
                                 <td>Powerade</td>
-                                <td>2 (32oz) for $2.50</td>
+                                <td>2 (32oz) for $3.75</td>
                             </tr>
                         </table>
                     </div>
@@ -166,11 +178,11 @@
                             </tr>
                             <tr>
                                 <td>Monster/Full Throttle/Reign/NOS/Coke Energy</td>
-                                <td>2 for $4.50</td>
+                                <td>2 for $5</td>
                             </tr>
                             <tr>
                                 <td>Red Bull</td>
-                                <td>2 (8.4oz) for $4.22 , 2 (12oz) for $5.33</td>
+                                <td>2 (8.4oz) for $4.55 , 2 (12oz) for $5.75</td>
                             </tr>
                             <tr>
                                 <td>RockStar</td>
@@ -197,11 +209,11 @@
                             </tr>
                             <tr>
                                 <td>Coke</td>
-                                <td>2 (24oz) for $3.50 , 2 (16oz) cans for $2.50</td>
+                                <td>2 (24oz) for $4 , 2 (16oz) cans for $3</td>
                             </tr>
                             <tr>
                                 <td>Pepsi</td>
-                                <td>2 (24oz) for $3.50 , 2 (16oz) cans for $2.50</td>
+                                <td>2 (24oz) for $4 , 2 (16oz) cans for $3</td>
                             </tr>
                         </table>
                     </div>
