Update chevron logo

--- a/HTML/specials.html
+++ b/HTML/specials.html
@@ -64,7 +64,7 @@
             <div class="row">
                 <div class="col-9">
                     <a class="navbar-brand float-md-left" href="#">
-                        <img src="https://www.chevronwithtechron.com/images/layout/logo.svg" width="36" height="36"
+                        <img src="https://www.chevron.com/-/media/shared-media/images/hallmark.png" width="36" height="36"
                             class="d-inline-block align-top pl-1" alt="" loading="lazy">
                         <span style="font-size: 1.75rem;"></span>&nbsp;Chevron Campus Food Shop
                     </a>
