--- a/index.html
+++ b/index.html
@@ -83,23 +83,33 @@
   <div class="container my-3" id="homePageDiv">
     <div class="container">
       <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> </h5>
-      <!-- <img src="images/kang1.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage"> -->
-      <div class="text-center">
-        <p style="color: #198FCB; font-weight: bold; margin-bottom: 0%;">Orion</p>
-        <p style="font-size: 1.25rem; font-weight: bold; margin-bottom: 0%;">2 for $33.99 OR 1 for $17.99</p>
-      </div>
-      <div class="text-center">
-        <p style="color: #198FCB; font-weight: bold; margin-bottom: 0%;">Kadobar</p>
-        <p style="font-size: 1.25rem; font-weight: bold; margin-bottom: 0%;">2 for $32.99 OR 1 for $17.99</p>
-      </div>
-      <div class="text-center">
-        <p style="color: #198FCB; font-weight: bold; margin-bottom: 0%;">KangVape/ONEE stick 2000</p>
-        <p style="font-size: 1.25rem; font-weight: bold; margin-bottom: 0%;">2 for $20.99 OR 1 for $11.99</p>
-      </div>
-      <div class="text-center">
-        <p style="color: #198FCB; font-weight: bold; margin-bottom: 0%;">Elfbar</p>
-        <p style="font-size: 1.25rem; font-weight: bold; margin-bottom: 0%;">2 for $36.99 OR 1 for $19.99</p>
-      </div>
+      <br>
+      <table class="table table-hover table-bordered border-secondary">
+                            <tr class="table-light table-bordered border-secondary">
+                                <th>Product</th>
+                                <th>Special</th>
+                            </tr>
+                            <tr>
+                                <td>Orion</td>
+                                <td>2 for $33.99, 1 for $17.99</td>
+                            </tr>
+                            <tr>
+                                <td>Kadobar</td>
+                                <td>2 for $32.99, 1 for $17.99</td>
+                            </tr>
+                            <tr>
+                                <td>Kang Vape/Onee Stick 2000</td>
+                                <td>2 for $20.99, 1 for $11.99</td>
+                            </tr>
+                            <tr>
+                                <td>Kang Vape/Onee Stick 3000</td>
+                                <td>2 for $26.99, 1 for $11.99</td>
+                            </tr>
+                            <tr>
+                                <td>Elfbar</td>
+                                <td>2 for $36.99, 1 for $19.99</td>
+                            </tr>
+                        </table>
       <p class="text-center my-2" style="font-size: 1.10rem; font-weight: bold;"><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></p>
       <!-- <h5 class="text-center my-2 "><a class="text-danger" href="HTML/specials.html">Click for Other Specials</a></h5> -->
       <div class="accordion my-3" id="accordionPanelsStayOpenExample">
