Special Vape Prices sign

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
   </div>
   <div class="container my-3" id="homePageDiv">
     <div class="container">
-      <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> </h5>
+      <h5 class="my-3 text-danger text-center"><span id="special1">!!! Special Vape Prices. Best Price in Town !!!</span> </h5>
       <br>
       <table class="table table-hover table-bordered border-secondary">
                             <tr class="table-light table-bordered border-secondary">
-                                <th>Product</th>
+                                <th>VAPE Product</th>
                                 <th>Special</th>
                             </tr>
                             <tr>
