--- a/HTML/specials.html
+++ b/HTML/specials.html
@@ -78,8 +78,8 @@
     </div>
     <h4 id="current_date" class="my-2" style="text-align: end;"></h4>
     <div class="container">
-        <h4 class="my-3 text-danger text-center"><span id="special1">!!! Special Promo of the month !!!</span> <span
-                style="color: #198FCB;">KangVape/ONEE stick</span></h4>
+        <h4 class="my-3 text-danger text-center"><span id="special1">!!! Special Prices !!!</span> <span
+                style="color: #198FCB;">All VAPE and Delta 8 Products</span></h4>
         <img src="../images/kang1.png" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage">
         <div class="accordion mt-3 mb-5" id="accordionExample">
             <div class="accordion-item">
@@ -112,7 +112,7 @@
                             </tr>
                             <tr>
                                 <td>Kang Vape/Onee Stick 3000</td>
-                                <td>2 for $26.99, 1 for $11.99</td>
+                                <td>2 for $26.99, 1 for $14.99</td>
                             </tr>
                             <tr>
                                 <td>Elfbar</td>
