--- a/HTML/hours.html
+++ b/HTML/hours.html
@@ -29,7 +29,7 @@
   <!-- <nav id="navBar" class="navbar navbar-expand-lg sticky-top py-0">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="https://www.chevronwithtechron.com/images/layout/logo.svg" width="34" height="34"
+            <img src="https://www.chevron.com/-/media/shared-media/images/hallmark.png" width="34" height="34"
               class="d-inline-block align-top pl-1" alt="" loading="lazy">&nbsp;&nbsp;Chevron &
             Campus Food Shop
           </a>
@@ -106,7 +106,7 @@
         <p id="MondayDiv1">Monday</p>
       </div>
       <div class="col-md-3 col-sm-5 col-xs-6 text-center daydiv">
-        <p id="MondayDiv2">6AM-12PM</p>
+        <p id="MondayDiv2">6AM-1AM</p>
       </div>
       <div class="col-md-3 col-sm-1"></div>
       <div class="col-md-3"></div>
@@ -114,7 +114,7 @@
         <p id="TuesdayDiv1">Tuesday</p>
       </div>
       <div class="col-md-3 text-center">
-        <p id="TuesdayDiv2">6AM-12PM</p>
+        <p id="TuesdayDiv2">6AM-1AM</p>
       </div>
       <div class="col-md-3"></div>
       <div class="col-md-3"></div>
@@ -122,7 +122,7 @@
         <p id="WednesdayDiv1">Wednesday</p>
       </div>
       <div class="col-md-3 text-center">
-        <p id="WednesdayDiv2">6AM-12PM</p>
+        <p id="WednesdayDiv2">6AM-1AM</p>
       </div>
       <div class="col-md-3"></div>
       <div class="col-md-3"></div>
@@ -130,7 +130,7 @@
         <p id="ThursdayDiv1">Thursday</p>
       </div>
       <div class="col-md-3 text-center">
-        <p id="ThursdayDiv2">6AM-12PM</p>
+        <p id="ThursdayDiv2">6AM-1AM</p>
       </div>
       <div class="col-md-3"></div>
       <div class="col-md-3"></div>
