correct pic link

--- a/HTML/specials.html
+++ b/HTML/specials.html
@@ -80,7 +80,7 @@
     <div class="container">
         <h4 class="my-3 text-danger text-center"><span id="special1">!!! Special Prices !!!</span> <span
                 style="color: #198FCB;">All VAPE and Delta 8 Products</span></h4>
-        <img src="../images/vape1.jpeg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage">
+        <img src="../images/vape1.jpg" class="img-fluid rounded mx-auto d-block" alt="Responsive image" id="kangImage">
         <div class="accordion mt-3 mb-5" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
